--- a/templates/partials/profile/sections/_general.html
+++ b/templates/partials/profile/sections/_general.html
@@ -285,7 +285,7 @@
         <div>
           <a :href="$store.profileModal.therapist.online_scheduling_url" target="_blank" rel="noopener" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-[#116466] text-white text-sm font-semibold shadow hover:bg-[#0d4c4d] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#89B0AE]">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="w-4 h-4"><path d="M8 7V3m8 4V3M3 11h18M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2Z"/></svg>
-            <span>Book Online</span>
+            <span>Schedule Online</span>
           </a>
         </div>
       </template>
